Fix #593: use flex-shrink: 0 to avoid breaks in the date field in event lists.
Also run the cleanEmptySections function on main event list.

--- a/sass/_tables.sass
+++ b/sass/_tables.sass
@@ -10,6 +10,9 @@ ul.event-list
     gap: 0.5rem
     break-inside: avoid
 
+    time
+      flex-shrink: 0
+
 
 ul.talentlist-section
   list-style-type: none
